@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Avoid table corruption in Graph:deleteNode().
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Add reversal information to Edge:__tostring().
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
